<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="title_activity_main">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Notes</string>
    <string name="menu_gallery">Courses</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_main2">NoteKeeper</string>
    <string name="title_activity_main1">NoteKeeper</string>
    <string name="note_title_hint">Note title</string>
    <string name="note_text_hint">Note text</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="messages_header">Notifications</string>
    <string name="sync_header">Data &amp; Sync</string>

    <!-- General Preferences -->
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Your Name</string>
    <string name="pref_title_email_address">Email address</string>
    <string name="pref_default_email_address">Yourname@yourhost.com</string>
    <string name="pref_title_favourite_social">Favourite social network</string>

    <array name="pref_entries_favourite_social">
        <item>Google+</item>
        <item>Facebook</item>
        <item>Twitter</item>
    </array>

    <array name="pref_values_favourite_social">
        <item>http://plus.google.com</item>
        <item>http://facebook.com</item>
        <item>http://twitter.com</item>
    </array>

    <string name="pref_default_favourite_social">http://plus.google.com</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="set_reminder">Set reminder</string>
    <string name="send_as_email">Send as email</string>
    <string name="channel_name">NotesChannel</string>
    <string name="channel_description">Channel for notes notifications</string>
    <string name="view_all_notes">View all notes</string>
    <string name="backup_notes_action">Backup Notes</string>
    <string name="upload_notes_action">Upload Notes</string>

</resources>
