<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="@string/pref_default_display_name"
        app:key="user_display_name"
        android:title="@string/pref_default_display_name"
        app:title="@string/pref_title_display_name"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_email_address"
        android:key="user_email_address"
        android:title="@string/pref_title_email_address"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:defaultValue="@string/pref_default_favourite_social"
        android:entries="@array/pref_entries_favourite_social"
        android:entryValues="@array/pref_values_favourite_social"
        android:key="user_favourite_social"
        android:title="@string/pref_title_favourite_social"
        app:useSimpleSummaryProvider="true" />



</PreferenceScreen>
